Bug 53513 - src/gallium/state_trackers/egl/common/egl_g3d_api.c:56:18: error: ‘_EGLContext’ has no member named ‘ClientVersion’
Summary: src/gallium/state_trackers/egl/common/egl_g3d_api.c:56:18: error: ‘_EGLContex...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) All
: medium blocker
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-14 23:06 UTC by Vinson Lee
Modified: 2012-08-15 09:03 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
proposed patch (1.33 KB, patch)
2012-08-15 08:50 UTC, Andreas Boll
Details | Splinter Review

Description Vinson Lee 2012-08-14 23:06:02 UTC
mesa: cde2b7e55d88915d0c139ab5cdd3f204936958dd (master)

$ scons
[...]
  Compiling src/gallium/state_trackers/egl/common/egl_g3d_api.c ...
src/gallium/state_trackers/egl/common/egl_g3d_api.c: In function ‘egl_g3d_choose_st’:
src/gallium/state_trackers/egl/common/egl_g3d_api.c:56:18: error: ‘_EGLContext’ has no member named ‘ClientVersion’
src/gallium/state_trackers/egl/common/egl_g3d_api.c:67:19: error: ‘_EGLContext’ has no member named ‘ClientVersion’

3fd79dd9886f05f45f3dc94c028a38dd75b8ee1b is the first bad commit
commit 3fd79dd9886f05f45f3dc94c028a38dd75b8ee1b
Author: Ian Romanick <ian.d.romanick@intel.com>
Date:   Wed Jul 18 15:59:15 2012 -0700

    egl: Rename ClientVersion to ClientMajorVersion, add ClientMinorVersion
    
    Signed-off-by: Ian Romanick <ian.d.romanick@intel.com>
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>

:040000 040000 7aa70b90c54224bf130d08a3984673884f731868 28cb6e04081d386fbe69d51840fe5c4a8e637f7a M	src
bisect run success
Comment 1 Andreas Boll 2012-08-15 08:50:39 UTC
Created attachment 65593 [details] [review]
proposed patch

Could you test the attached patch.
I can't test it myself right now.
Comment 2 Michel Dänzer 2012-08-15 09:03:02 UTC
Sorry Andreas, didn't see your patch in time.

Commit: 538085c5d423df4fed3c3b2c473c3684f7b08db6
URL:    http://cgit.freedesktop.org/mesa/mesa/commit/?id=538085c5d423df4fed3c3b2c473c3684f7b08db6

Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Wed Aug 15 10:49:22 2012 +0200

st/egl: Fix up for ClientVersion -> ClientMajorVersion rename.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.