st/egl: Fix up for ClientVersion -> ClientMajorVersion rename.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=53513

Signed-off-by: Michel Dänzer <michel.daenzer@amd.com>